--- a/package.json
+++ b/package.json
@@ -9,14 +9,23 @@
     "test": "NODE_OPTIONS=--experimental-vm-modules npx mocha --timeout 10000 src/app.test.js "
   },
   "dependencies": {
-     "cookie-parser": "~1.4.4",
+    "@digitalbazaar/did-io": "^2.0.0",
+    "@digitalbazaar/did-method-key": "^5.1.0",
+    "@digitalbazaar/ed25519-signature-2020": "^5.2.0",
+    "@digitalbazaar/ed25519-verification-key-2020": "^4.1.0",
+    "@digitalbazaar/vc": "^6.0.1",
+    "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
-    "debug": "~2.6.9",
-    "dotenv": "^16.0.3",
-    "express": "~4.16.1",
-    "morgan": "~1.9.1",
+    "credentials-context": "^2.0.0",
     "crypto": "^1.0.1",
-    "keyv": "^4.5.2"
+    "debug": "~2.6.9",
+    "did-context": "^3.1.1",
+    "dotenv": "^16.0.3",
+    "ed25519-signature-2020-context": "^1.1.0",
+    "express": "~4.16.1",
+    "jsonld-document-loader": "^2.0.0",
+    "keyv": "^4.5.2",
+    "morgan": "~1.9.1"
   },
   "devDependencies": {
     "chai": "^4.3.7",
