--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "NODE_OPTIONS=--experimental-vm-modules npx mocha --timeout 10000 src/app.test.js "
+    "start": "node -r dotenv/config server.js",
+    "dev": "nodemon -r dotenv/config server.js",
+    "test": "NODE_OPTIONS=--experimental-vm-modules npx mocha --timeout 10000 -r dotenv/config dotenv_config_path=src/test-fixtures/.env.testing src/app.test.js "
   },
   "dependencies": {
     "@digitalbazaar/did-io": "^2.0.0",
@@ -25,6 +25,7 @@
     "express": "~4.16.1",
     "jsonld-document-loader": "^2.0.0",
     "keyv": "^4.5.2",
+    "keyv-file": "^0.2.0",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
