--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@digitalbazaar/ed25519-signature-2020": "^5.2.0",
     "@digitalbazaar/ed25519-verification-key-2020": "^4.1.0",
     "@digitalbazaar/vc": "^6.0.1",
+    "axios": "^1.7.2",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "credentials-context": "^2.0.0",
