--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,11 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm install
       - name: Run test with Node.js ${{ matrix.node-version }}
-        run: npm run test
+        run: npm run coveralls
         env:
           CI: true
+      - name: Coveralls GitHub Action
+        uses: coverallsapp/github-action@v1.1.2
+        with:
+          github-token: ${{ github.token }}
   
