--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@digitalcredentials/transaction-manager-service",
+  "name": "@digitalcredentials/transaction-service",
   "description": "An express app for managing challenges in a DIDAuth exchange.",
   "version": "0.0.1",
   "type": "module",
@@ -8,7 +8,7 @@
     "dev": "nodemon -r dotenv/config server.js",
     "dev-noenv": "nodemon server.js",
     "test": "NODE_OPTIONS=--experimental-vm-modules npx c8 mocha --timeout 10000 -r dotenv/config dotenv_config_path=src/test-fixtures/.env.testing src/app.test.js ",
-    "coveralls": "npm run test; c8 report --reporter=text-lcov | coveralls",
+    "coveralls": "npm run test; npx c8 report --reporter=text-lcov",
     "prepare": "test -d node_modules/husky && husky install || echo \"husky is not installed\"",
     "lint": "eslint",
     "lint-fix": "eslint --fix"
@@ -37,6 +37,7 @@
   "devDependencies": {
     "@eslint/js": "^9.3.0",
     "chai": "^4.3.7",
+    "coveralls": "^3.1.1",
     "eslint": "^9.3.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-mocha": "^10.4.3",
