--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "husky": "^9.0.11",
     "lint-staged": "^15.2.5",
     "mocha": "^10.2.0",
+    "nock": "^13.5.4",
     "nodemon": "^2.0.21",
     "prettier": "3.2.5",
     "supertest": "^6.3.3"
