--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "jsonld-document-loader": "^2.0.0",
     "keyv": "^4.5.2",
     "keyv-file": "^0.2.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "nodemailer": "^6.9.14"
   },
   "devDependencies": {
     "@eslint/js": "^9.3.0",
