--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@digitalbazaar/ed25519-verification-key-2020": "^4.1.0",
     "@digitalbazaar/vc": "^7.0.0",
     "@digitalcredentials/security-document-loader": "^6.0.0",
+    "@keyv/redis": "^4.3.2",
     "axios": "^1.7.7",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
