--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ lerna-debug.log*
 
 package-lock.json
 yarn.lock
+pnpm-lock.yaml
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
@@ -75,6 +76,7 @@ types/
 # dotenv environment variables file
 .env
 .env.test
+test-fixtures/.env.testing
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
