--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@digitalcredentials/transaction-service",
-  "description": "An express app for managing DID Auth and VC-API exchanges.",
+  "description": "A hono app for managing DID Auth and VC-API exchanges.",
   "version": "0.3.0",
   "type": "module",
   "scripts": {
     "build": "tsc",
     "start": "node -r dotenv/config dist/server.js",
-    "dev": "nodemon -r dotenv/config --exec ts-node src/server.ts",
+    "dev": "nodemon -r dotenv/config --exec tsx src/server.ts",
     "dev-noenv": "nodemon --exec ts-node src/server.ts",
     "test": "dotenvx run -f src/test-fixtures/.env.testing -- vitest",
     "coverage": "dotenvx run -f src/test-fixtures/.env.testing -- vitest run --coverage",
@@ -33,6 +33,7 @@
     "keyv-file": "^5.1.2",
     "morgan": "~1.9.1",
     "nodemailer": "^6.9.14",
+    "tsx": "^4.20.1",
     "zod": "^3.25.56"
   },
   "devDependencies": {
