use relative path, fixes test failures

--- a/src/test-fixtures/.env.testing
+++ b/src/test-fixtures/.env.testing
@@ -1,1 +1,1 @@
-PERSIST_TO_FILE=/Users/notto/Projects/skybridgeskills/dcc/dcc-transaction-service/src/data/transactionsFile.json
+PERSIST_TO_FILE=./src/data/transactionsFile.json
