--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "lint-fix": "eslint --fix"
   },
   "dependencies": {
+    "@digitalbazaar/data-integrity": "^2.5.0",
+    "@digitalbazaar/ecdsa-rdfc-2019-cryptosuite": "^1.2.0",
+    "@digitalbazaar/ed25519-multikey": "^1.3.1",
     "@digitalbazaar/ed25519-signature-2020": "^5.4.0",
     "@digitalbazaar/ed25519-verification-key-2020": "^4.1.0",
+    "@digitalbazaar/eddsa-rdfc-2022-cryptosuite": "^1.2.0",
     "@digitalbazaar/vc": "^7.0.0",
     "@digitalcredentials/security-document-loader": "^6.0.0",
     "@hono/node-server": "^1.14.4",
